[package]
name = "fishit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
async-trait = "0.1.68"
chrono = "0.4.24"
num_enum = "0.6.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
rustgie = { git = "https://github.com/BarmonHammer/rustgie.git"}
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }